advanced search accordion on tablet fixed

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -487,7 +487,7 @@ Item#entity {
   display: none;
 }
 
-@media(min-width:768px) {
+@media(min-width:1025px) {
   .nav-tabs#subjects  {
     display: flex;
   }
@@ -506,7 +506,7 @@ Item#entity {
   }
 }
 
-@media(max-width:767px) {
+@media(max-width:1024px) {
   .tab-pane {
     display: block !important;
     opacity: 1;
